[package]
name = "piks_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.3"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
bb8 = "0.8.3"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
itertools = "0.12.1"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand_core = { version = "0.6.4", features = ["std"] }
rayon = "1.8.1"
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
surreal-id = "0.2.2"
surreal_bb8 = "0.1.0"
surrealdb = "1.1.1"
thiserror = "1.0.56"
time = { version = "0.3.32", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
